less/styles.less
@import "bootstrap.less";

/* =Typography
-----------------------------------------------------------------------------*/

header#header {

  #site-title {
    text-transform: uppercase;
    background-color: @brand-success;
    a {
      color:white; text-decoration: none;
    }
    &:hover {
      background-color: darken(@brand-success, 5%);
    }
  }

  #navigation {
    .navbar-nav {
      li.dropdown {
        > .btn {
          text-align: left;
        }
      }
    }
  }
}

nav {
  font-family: @headings-font-family;
}

nav#breadcrumb {
  ol.breadcrumb {
    > li:last-child > a {
      color: transparent;
    }
  }
}

section#content {

  > .row {

    * {
      font-size:@font-size-base;
    }

    .item-list {

      h3.item-title:last-child {
        &:after { font-family: @font-family-base; }
      }
    }
  }
}


/* =Layout
-----------------------------------------------------------------------------*/

*, *:focus { outline: none !important; }

html, body, body > .container { height: 100%; position: relative; }

header#header {

  margin-bottom: @grid-gutter-width;

  #site-title {
    margin:0;
    padding: 0.5*@grid-gutter-width;
    a { display: block; }
  }

  #navigation {
    .navbar-nav {
      float: none!important;
      > li {
        float: none!important;
        ul.dropdown-menu {
          float: none!important; right:0;
          .box-shadow(none);
        }
      }
    }
  }
}

nav#breadcrumb {
  position: relative; z-index: 1;
  margin-bottom: -1 * ( @font-size-base * @line-height-base + 2 * @breadcrumb-padding-vertical + @line-height-computed );
  visibility: hidden;
  ol.breadcrumb {
    > li + li:before {
      content:"/";
    }
    > li:last-child > a {
      // Make a cross
      @size: 0.8*@font-size-h1; @weigth:2px;
      display: block;
      position: absolute; top: 0; right: 0;
      width: @size; height: @size;
      visibility: visible; overflow: hidden;
      background: transparent url("../img/cross-2.gif") center no-repeat;
    }
  }
}

section#content {

  // position: relative; z-index: 0;
  margin-bottom:4*@grid-gutter-width;

  > .row {
    border: 2px solid @text-color;
    padding: @grid-gutter-width 0.5*@grid-gutter-width;
    margin:0;

    .item-list {

      a { display: block; }

      > * {
        margin-right: 4*@grid-gutter-width!important;
      }

      h3.item-title {
        border-top:2px solid @text-color;
        margin: @grid-gutter-width 0 0 0;
        padding-top: @grid-gutter-width;
      }

      h3.item-title:last-child {
        &:after { content:"--"; display: block; }
      }

      h3.item-title ~ * {
        &:before { content:"--"; display: block; }
        * {
          margin: 0;
        }
        h4.hours {
          margin: 0 0 (@line-height-computed / 4);
        }
      }

      @media (max-width: @screen-xs-max) {
        & { clear:left; }
        &:nth-child(-n+1) h3.item-title {
          border-width: 0!important;
          margin-top:0;
          padding-top: 0;
        }
      }
      @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
        &:nth-of-type(2n+1) { clear:left; }
        &:nth-child(-n+2) h3.item-title {
          border-width: 0!important;
          margin-top:0;
          padding-top: 0;
        }
      }
      @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
        &:nth-of-type(3n+1) { clear:left; }
        &:nth-child(-n+3) h3.item-title {
          border-width: 0!important;
          margin-top:0;
          padding-top: 0;
        }
      }
      @media (min-width: @screen-lg-min) {
        &:nth-of-type(4n+1) { clear:left; }
        &:nth-child(-n+4) h3.item-title {
          border-width: 0!important;
          margin-top:0;
          padding-top: 0;
        }
      }

    }

    .node {
      > * {
        margin: 0 0 (@line-height-computed / 2);
      }
      > *:last-child {
        margin-bottom:0;
      }
      > h3.date {
        margin-bottom: 0;
      }
      > h4.hours {
        &:before { content:"--"; display: block; }
      }
    }

  }

}

#stream-wrapper {
  // position: absolute;
  // top: 0; left: 0; right: 0;

  .field-item img { background-color: @gray-lighter; display: block; width: 50%; height: auto; }

  .thema {
    // position: absolute;
    // top: 0; left: 0; right: 0; bottom:0;
    // background-color: white;
    // border: 3px solid red; background-color: rgba(255, 200, 200, 0.7);

    .node {
      // position: absolute;
      // bottom: 0; left: 0; right: 0;
    }

    .node-thematique {
      iframe { max-width: 100%; }
      .field-type-video-embed-field {
        .embed-responsive; .embed-responsive-4by3;
        .field-items {
          .embed-responsive-item;
        }
      }
      img { width: 100%; height: 100%; }
    }

    .node-voisin {
      overflow: hidden;
      iframe { max-width: 100%; }

      &.view-mode-voisin_video_t1_16_9,
      &.view-mode-voisin_video_t2_16_9,
      &.view-mode-voisin_video_t3_16_9 {
        .field-type-video-embed-field {
          .embed-responsive; .embed-responsive-16by9;
          .field-items {
            .embed-responsive-item;
          }
        }
      }

      &.view-mode-voisin_video_t1_4_3,
      &.view-mode-voisin_video_t2_4_3,
      &.view-mode-voisin_video_t3_4_3 {
        .field-type-video-embed-field {
          .embed-responsive; .embed-responsive-4by3;
          .field-items {
            .embed-responsive-item;
          }
        }
      }
    }
  }

}

#bord-time {
  position: fixed; right: 0; bottom: 0; left: 0; z-index: -1;
  height: 20%;
  .bord-time {
    background-color: @brand-success;
    height: 100%; padding: 0 !important;
    width: 4%;
    float: left;
    body.program-mode & { background-color: @brand-danger; }
  }
  .bord-time-right {
    .pull-right;
  }
}


/* =Development
-----------------------------------------------------------------------------*/

#dev  { position: fixed; bottom:@grid-gutter-width; width: 100%; }

#size { font-size: 10px; }

@media (max-width: @screen-xs-max)                                 { #size:after { content:"Phones (-xs)"; }         }
@media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) { #size:after { content:"Tablets (-sm)"; }        }
@media (min-width: @screen-md-min) and (max-width: @screen-md-max) { #size:after { content:"Desktops (-md)"; }       }
@media (min-width: @screen-lg-min)                                 { #size:after { content:"Large Desktops (-lg)"; } }
@media (orientation: landscape) { #size:before { content:"Landscape, "; } }
@media (orientation: portrait)  { #size:before { content:"Portrait, ";  } }

#dev .row              { text-align: center; font-size: 10px; margin-bottom:0 !important; }
#dev .row > div        { background-color: rgba(0, 255, 255, 0.3); box-shadow: 0 0 0 1px #0FF; }
#dev .row > div > *    { background-color: rgba(255, 255, 255, 0.7); overflow: hidden; min-height: 13px; }

